--- a/src/app/auth/register.component.html
+++ b/src/app/auth/register.component.html
@@ -2,95 +2,21 @@
   <div class="inner-center">
     <h1>Tritt der Box bei</h1>
     <p>Blub.</p>
-    <!--
-    <form [formGroup]="registerForm" (submit)="onSubmit()">
-      <section>
-        <mat-form-field>
-          <input matInput formControlName="username" placeholder="Nutzername" type="search" maxlength="64">
-          <mat-error *ngIf="registerForm.controls.username.errors">Der Nutzername fehlt</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput email formControlName="email" placeholder="E-Mail" type="email" maxlength="64">
-          <mat-error *ngIf="registerForm.controls.email.errors">Die E-Mail ist nicht gültig</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput email formControlName="emailConfirm" placeholder="E-Mail bestätigen" type="email" maxlength="64">
-          <mat-error *ngIf="registerForm.controls.email.errors">Die E-Mail ist nicht gültig</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput formControlName="password" placeholder="Passwort" type="password" maxlength="64">
-          <mat-error *ngIf="registerForm.controls.password.errors">Das Passwort fehlt</mat-error>
-        </mat-form-field>
-        <mat-form-field>
-          <input matInput formControlName="passwordConfirm" placeholder="Passwort bestätigen" type="password" maxlength="64">
-          <mat-error *ngIf="registerForm.controls.password.errors">Das Passwort fehlt</mat-error>
-        </mat-form-field>
-        <table>
-          <tr>
-            <td>
-              <mat-form-field>
-                <input matInput formControlName="firstName" placeholder="Vorname" type="text" maxlength="64">
-                <mat-error *ngIf="registerForm.controls.firstName.errors">Der Vorname fehlt</mat-error>
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field>
-                <input matInput formControlName="lastName" placeholder="Nachname" type="text" maxlength="64">
-                <mat-error *ngIf="registerForm.controls.lastName.errors">Der Nachname fehlt</mat-error>
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
-      </section>
-      <section>
-        <table width="80%" align="center">
-          <tr>
-            <td colspan="2" align="center">
-              <app-captcha (resolved)="onCaptchaResolved($event)"></app-captcha>
-              <mat-hint *ngIf="registerForm.controls.captcha.errors"><br/>Das Captcha muss gelöst sein</mat-hint>
-            </td>
-          </tr>
-          <br/>
-          <tr>
-            <td>
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                [routerLink]="[ '../' ]">
-                Zurück
-              </button>
-            </td>
-            <td>
-              <button
-                mat-raised-button
-                color="primary"
-                type="submit"
-                [disabled]="registerForm.status !== 'VALID'">
-                Registrieren
-              </button>
-            </td>
-          </tr>
-        </table>
-      </section>
-    </form>
-    -->
-
-    <mat-horizontal-stepper [linear]="true">
+    <mat-horizontal-stepper [linear]="true" style="background: transparent">
       <mat-step [stepControl]="dataForm">
         <form [formGroup]="dataForm">
           <ng-template matStepLabel>Sag uns wer du bist</ng-template>
           <mat-form-field>
             <input matInput formControlName="username" placeholder="Nutzername" type="search" maxlength="64">
-            <mat-error *ngIf="dataForm.controls.username.errors">Der Nutzername fehlt</mat-error>
+            <mat-error *ngIf="dataForm.controls.username.errors">Bitte gib einen Nutzernamen an</mat-error>
           </mat-form-field>
           <mat-form-field>
             <input matInput formControlName="firstName" placeholder="Vorname" type="text" maxlength="64">
-            <mat-error *ngIf="dataForm.controls.firstName.errors">Der Vorname fehlt</mat-error>
+            <mat-error *ngIf="dataForm.controls.firstName.errors">Bitte gib deinen Vornamen an</mat-error>
           </mat-form-field>
           <mat-form-field>
             <input matInput formControlName="lastName" placeholder="Nachname" type="text" maxlength="64">
-            <mat-error *ngIf="dataForm.controls.lastName.errors">Der Nachname fehlt</mat-error>
+            <mat-error *ngIf="dataForm.controls.lastName.errors">Bitte gib deinen Nachnamen an</mat-error>
           </mat-form-field>
           <div>
             <button mat-raised-button matStepperNext color="primary">Nächster Schritt</button>
@@ -104,7 +30,7 @@
           <mat-form-field>
             <input matInput email formControlName="email" placeholder="E-Mail" type="email" maxlength="64">
             <mat-error *ngIf="emailForm.controls.email.errors?.required">Du musst eine E-Mail angeben</mat-error>
-            <mat-error *ngIf="emailForm.controls.email.errors?.email">Die E-Mail ist nicht gültig</mat-error>
+            <mat-error *ngIf="emailForm.controls.email.errors?.email && !emailForm.controls.email.errors?.required">Die E-Mail ist nicht gültig</mat-error>
           </mat-form-field>
           <mat-form-field>
             <input matInput email formControlName="emailConfirm" placeholder="E-Mail bestätigen" type="email" maxlength="64">
@@ -120,14 +46,19 @@
           <ng-template matStepLabel>Wähle ein Passwort</ng-template>
           <mat-form-field>
             <input matInput formControlName="password" placeholder="Passwort" type="password" maxlength="64">
-            <mat-error *ngIf="passwordForm.controls.passwordConfirm.errors?.required">Das Passwort fehlt</mat-error>
+            <mat-error *ngIf="passwordForm.controls.passwordConfirm.errors?.required">Bitte wähle ein Passwort</mat-error>
           </mat-form-field>
           <mat-form-field>
             <input matInput formControlName="passwordConfirm" placeholder="Passwort bestätigen" type="password" maxlength="64">
             <mat-error *ngIf="passwordForm.controls.passwordConfirm.errors?.passwordNotMatching">Die Passwörter stimmen nicht überein</mat-error>
           </mat-form-field>
+          <div style="text-align: center">
+            <app-captcha (resolved)="onCaptchaResolved($event)" style="display: inline-block"></app-captcha>
+            <mat-hint *ngIf="!captchaKey"><br/>Das Captcha muss gelöst sein</mat-hint>
+          </div>
+          <br/>
           <div>
-            <button mat-raised-button matStepperNext color="primary" (click)="register()" type="button">Registrieren</button>
+            <button mat-raised-button matStepperNext color="primary" (click)="register()" type="button">Jetzt Registrieren</button>
           </div>
         </form>
       </mat-step>
