fck dis shit v2

--- a/src/app/auth/register.component.html
+++ b/src/app/auth/register.component.html
@@ -19,7 +19,7 @@
             <mat-error *ngIf="dataForm.controls.lastName.errors">Bitte gib deinen Nachnamen an</mat-error>
           </mat-form-field>
           <div>
-            <button mat-raised-button matStepperNext (click)="email.focus()" color="primary">Nächster Schritt</button>
+            <button mat-raised-button matStepperNext color="primary">Nächster Schritt</button>
           </div>
         </form>
       </mat-step>
