--- a/src/app/subjects/subject-edit.component.html
+++ b/src/app/subjects/subject-edit.component.html
@@ -1,4 +1,12 @@
-<mat-form-field>
-  <input matInput placeholder="Name" value="Test">
-  <mat-icon matSuffix>mode_edit</mat-icon>
-</mat-form-field>
+<div class="edit-container-outer">
+  <table style="width: 100%">
+    <tr>
+      <td>
+        <mat-form-field style="width: 100%">
+          <input matInput placeholder="Name" value="Test">
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+
+</div>
