--- a/src/app/subjects/subject-detail.component.html
+++ b/src/app/subjects/subject-detail.component.html
@@ -1,10 +1,29 @@
 <table style="width: 100%; height: 90%">
   <tr>
-    <td routerLink="learn">
-      Lernen
+    <td>
+      <div class="card-container-outer">
+        <div class="card-container-inner">
+          <mat-card class="card-container" routerLink="learn">
+            <mat-card-header>
+              <mat-card-title style="font-size: 16pt">Lernen</mat-card-title>
+              <mat-card-subtitle style="font-size: 15pt;">Lerne das Set *placeholder*</mat-card-subtitle>
+            </mat-card-header>
+          </mat-card>
+        </div>
+      </div>
     </td>
-    <td routerLink="edit">
-      Karteikarten anpassen
+    <td >
+      <div class="card-container-outer">
+        <div class="card-container-inner">
+          <mat-card class="card-container" routerLink="edit">
+            <mat-card-header>
+              <mat-card-title style="font-size: 16pt">Bearbeiten</mat-card-title>
+              <mat-card-subtitle style="font-size: 15pt;">Bearbeite das Set *placeholder*</mat-card-subtitle>
+            </mat-card-header>
+          </mat-card>
+        </div>
+      </div>
     </td>
   </tr>
 </table>
+
