--- a/src/app/subjects/subject-detail.component.scss
+++ b/src/app/subjects/subject-detail.component.scss
@@ -1,7 +1,28 @@
-td {
-  margin: 5%;
+.card-container-outer {
+  display: inline;
+  position: relative;
   width: 50%;
+}
+
+.card-container-inner {
   text-align: center;
   vertical-align: middle;
-  cursor: pointer;
+  margin-left: 15%;
+  height: 100%;
+
 }
+
+.card-container {
+  width: 60%;
+  min-height: 50%;
+  display: inline-block;
+  margin-right: auto;
+  height: 80%
+}
+
+.td{
+  padding-top: 1px;
+}
+
+
+
