--- a/src/app/subjects/subject-learn.component.scss
+++ b/src/app/subjects/subject-learn.component.scss
@@ -3,6 +3,7 @@
   width: 10%;
   height: 100%;
   bottom: 0;
+
 }
 
 .card-container-outer {
@@ -10,6 +11,7 @@
   position: absolute;
   height: 70%;
   width: 100%;
+  margin-bottom: 1%;
 }
 
 .card-container-inner {
