--- a/src/app/subjects/subject-detail.component.html
+++ b/src/app/subjects/subject-detail.component.html
@@ -6,7 +6,8 @@
           <mat-card class="card-container" routerLink="learn">
             <mat-card-header>
               <mat-card-title style="font-size: 16pt">Lernen</mat-card-title>
-              <mat-card-subtitle style="font-size: 15pt;">Lerne das Set *placeholder*</mat-card-subtitle>
+              <mat-card-subtitle style="font-size: 15pt;">Lerne das Set {{subject.id}}</mat-card-subtitle>
+              <!--subject.id only for test -->
             </mat-card-header>
           </mat-card>
         </div>
@@ -18,7 +19,7 @@
           <mat-card class="card-container" routerLink="edit">
             <mat-card-header>
               <mat-card-title style="font-size: 16pt">Bearbeiten</mat-card-title>
-              <mat-card-subtitle style="font-size: 15pt;">Bearbeite das Set *placeholder*</mat-card-subtitle>
+              <mat-card-subtitle style="font-size: 15pt;">Bearbeite das Set {{subject.name}}</mat-card-subtitle>
             </mat-card-header>
           </mat-card>
         </div>
