--- a/src/app/subjects/subjects.component.html
+++ b/src/app/subjects/subjects.component.html
@@ -1,5 +1,5 @@
 <div class="app-container outer-spacer">
-  <div class="ue1">Deine Fächer</div>
+  <h1>Deine Fächer</h1>
   <mat-table matSort [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="subject">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Fach</mat-header-cell>
