--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,7 @@
 
     <div class="sidenav-content-container">
       <mat-toolbar color="primary">
-        <mat-icon *ngIf="windowRef.isMobile()" (click)="sidenavOpened = !sidenavOpened" style="
-    cursor:  pointer;
-">menu</mat-icon>
+        <mat-icon *ngIf="windowRef.isMobile()" (click)="sidenavOpened = !sidenavOpened" style="cursor:  pointer;">menu</mat-icon>
         <span *ngIf="windowRef.isMobile()">&nbsp;&nbsp;</span>
         <span>{{pageTitle}}</span>
       </mat-toolbar>
