--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,7 @@
 <div class="app-container outer-spacer">
   <div style="text-align: center">
-    <div style="display: inline-block; width: 50%">
-      <div class="ue1" style=" font-size:  2rem; padding-bottom:  10px;">Dein Lernfortschritt</div>
-      <mat-progress-bar value="50"></mat-progress-bar>
-    </div>
+    <h1 style="display: inline-block; width: 50%">Dein Lernfortschritt</h1>
+      <mat-progress-bar value="50" style="display: inline-block; width: 50%"></mat-progress-bar>
+
   </div>
 </div>
