--- a/src/app/subjects/subject-learn.component.scss
+++ b/src/app/subjects/subject-learn.component.scss
@@ -18,6 +18,7 @@
   text-align: center;
   display: table-cell;
   vertical-align: middle;
+  padding-bottom: 5%;
 }
 
 .card-container {
@@ -27,3 +28,4 @@
   margin-left: auto;
   margin-right: 10%;
 }
+
