--- a/src/app/subjects/subject-detail.component.html
+++ b/src/app/subjects/subject-detail.component.html
@@ -5,7 +5,7 @@
         <div class="card-container-inner">
           <mat-card class="card-container" routerLink="learn">
             <mat-card-header>
-              <mat-card-title style="font-size: 16pt">Lernen</mat-card-title>
+              <mat-card-title >Lernen</mat-card-title>
               <mat-card-subtitle style="font-size: 15pt;">Lerne das Set {{subject.name}}</mat-card-subtitle>
               <!--subject.id only for test -->
             </mat-card-header>
@@ -18,7 +18,7 @@
         <div class="card-container-inner">
           <mat-card class="card-container" routerLink="edit">
             <mat-card-header>
-              <mat-card-title style="font-size: 16pt">Bearbeiten</mat-card-title>
+              <mat-card-title >Bearbeiten</mat-card-title>
               <mat-card-subtitle style="font-size: 15pt;">Bearbeite das Set {{subject.name}}</mat-card-subtitle>
             </mat-card-header>
           </mat-card>
