--- a/src/app/subjects/subject-detail.component.scss
+++ b/src/app/subjects/subject-detail.component.scss
@@ -2,6 +2,7 @@
   display: inline;
   position: relative;
   width: 50%;
+
 }
 
 .card-container-inner {
@@ -28,6 +29,7 @@
 }
 
 .mat-card-title{
+  font-size: 1.5rem;
   text-align: center;
   display: inline-block;
 }
