--- a/src/app/subjects/subject-learn.component.html
+++ b/src/app/subjects/subject-learn.component.html
@@ -36,9 +36,26 @@
   </div>
 </div>
 
+<div class="exbutton" style="position:fixed;bottom: 0">
+
+</div>
+
 <!-- TODO: Adjust mobile style -->
+
 <table style="position: fixed; bottom: 0; margin-right: 5%; margin-left: 5%; height: 10%; width: 80%">
-  <tr>
+  <div class="expand">
+    <tr>
+      <td>
+        <button mat-icon-button color="primary" (click)="collapsed1=!collapsed1" style=" left: 1500%;" >
+          <mat-icon aria-hidden="true" *ngIf="!collapsed1">arrow_upwards</mat-icon>
+          <mat-icon aria-hidden="true" *ngIf="collapsed1">arrow_downwards</mat-icon>
+
+        </button>
+      </td>
+    </tr>
+  </div>
+
+  <tr *ngIf="collapsed1">
     <td *ngFor="let i of range(0, 4)">
       <mat-card style="margin-right: 1em;">
         <mat-card-header>
@@ -60,3 +77,4 @@
     </td>
   </tr>
 </table>
+
