--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <mat-icon>
     account_circle
   </mat-icon>
-  <span *ngIf="authService.session">  
+  <span *ngIf="authService.session">
     &nbsp;&nbsp;{{authService.session.username}}
   </span>
 
@@ -16,7 +16,7 @@
     </button>
   </mat-menu>
 
-  <mat-toolbar-row *ngFor="let entry of entries" (click)="navigate(entry.routerLink)">
+  <mat-toolbar-row *ngFor="let entry of entries" (click)="navigate(entry.routerLink)" [ngClass]="{'active': router.url === entry.routerLink[0]}">
     <mat-icon *ngIf="entry.icon">{{entry.icon}}</mat-icon>
     <span *ngIf="entry.icon">&nbsp;&nbsp;</span>
     <span>{{entry.title}}</span>
