--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -7,7 +7,7 @@
     <form [formGroup]="loginForm" (submit)="onSubmit()">
       <section>
         <mat-form-field>
-          <input matInput formControlName="username" placeholder="Nutzername" type="search" maxlength="64">
+          <input matInput formControlName="username" placeholder="Nutzername oder E-Mail" type="search" maxlength="64">
           <mat-error *ngIf="loginForm.controls.username.errors">Der Nutzername fehlt</mat-error>
         </mat-form-field>
         <br/>
