--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <mat-icon>
     account_circle
   </mat-icon>
-  <span *ngIf="authService.session">
+  <span *ngIf="authService.session?.decodedToken?.preferred_username">
     &nbsp;&nbsp;{{authService.session?.decodedToken?.preferred_username}}
   </span>
 
