--- a/src/app/subjects/subject-learn.component.html
+++ b/src/app/subjects/subject-learn.component.html
@@ -21,9 +21,11 @@
       </mat-card-content>
       <mat-card-actions>
         <form [formGroup]="answerForm" (submit)="answerSubmitted()" *ngIf="!showAnswer; else solutionForm">
-          <mat-form-field class="learn-card-answer-edit-field">
-            <input matInput formControlName="answer" placeholder="Antwort">
-          </mat-form-field>
+          <div>
+            <mat-form-field class="learn-card-answer-edit-field">
+              <input matInput formControlName="answer" placeholder="Antwort">
+            </mat-form-field>
+          </div>
           <button mat-raised-button type="button">Überspringen</button>
           <button mat-raised-button color="primary" type="submit">Beantworten</button>
         </form>
