minor ui changes

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -1,7 +1,8 @@
 <div class="app-container center outer-center">
-
-
   <div class="inner-center">
+    <div class="logo">
+      <a style="margin-left: 10%"><img src="https://preview.ibb.co/nrZMzG/Logo_0_2_0_5_wip.png" alt="Logo_0_2_0_5_wip" border="0" style="width: 40%;"> </a>
+    </div>
     <h1>Willkommen in der Box</h1>
 
     <form [formGroup]="loginForm" (submit)="onSubmit()">
