added subject creating

--- a/src/app/subjects/subjects.component.scss
+++ b/src/app/subjects/subjects.component.scss
@@ -6,11 +6,12 @@ mat-row:hover {
   cursor: pointer;
   background-color: aliceblue;
 }
-.ue1{
+.ue1 {
   font-size:  2rem;
   padding-bottom: 10px;
 }
-button{
+
+.addSubjectButton {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
