--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-progress></ng-progress>
+<ng-progress [color]="'#7986CB'"></ng-progress>
 <app-storage-notification></app-storage-notification>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 
