--- a/src/app/subjects/subjects.component.html
+++ b/src/app/subjects/subjects.component.html
@@ -14,10 +14,8 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClick(row)"></mat-row>
   </mat-table>
-  <span title="Box hinzufügen">
-    <button mat-fab color="primary" >
-      <mat-icon>add</mat-icon>
-    </button>
-  </span>
+  <button class="addSubjectButton" (click)="addSubject()" mat-fab color="primary" matTooltip="Fach hinzufügen" matTooltipPosition="left">
+    <mat-icon>add</mat-icon>
+  </button>
 
 </div>
