improved styling + partial editing implementation

--- a/src/app/subjects/subject-learn.component.html
+++ b/src/app/subjects/subject-learn.component.html
@@ -1,6 +1,6 @@
 <div class="card-container-outer">
   <div class="card-container-inner">
-    <mat-card class="card-container">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title class="learn-card-title">Fach 1</mat-card-title>
         <mat-card-subtitle class="learn-card-subtitle">Karte 1 / 20</mat-card-subtitle>
