--- a/src/app/subjects/subject-detail.component.html
+++ b/src/app/subjects/subject-detail.component.html
@@ -1,30 +1,16 @@
-<table style="width: 100%; height: 90%" *ngIf="subject">
-  <tr>
-    <td>
-      <div class="card-container-outer">
-        <div class="card-container-inner">
-          <mat-card class="card-container" routerLink="learn">
-            <mat-card-header>
-              <mat-card-title >Lernen</mat-card-title>
-              <mat-card-subtitle style="font-size: 15pt;">Lerne das Set {{subject.name}}</mat-card-subtitle>
-              <!--subject.id only for test -->
-            </mat-card-header>
-          </mat-card>
-        </div>
-      </div>
-    </td>
-    <td>
-      <div class="card-container-outer">
-        <div class="card-container-inner">
-          <mat-card class="card-container" routerLink="edit">
-            <mat-card-header>
-              <mat-card-title >Bearbeiten</mat-card-title>
-              <mat-card-subtitle style="font-size: 15pt;">Bearbeite das Set {{subject.name}}</mat-card-subtitle>
-            </mat-card-header>
-          </mat-card>
-        </div>
-      </div>
-    </td>
-  </tr>
-</table>
-
+<div class="container" *ngIf="subject">
+  <div class="inner-container">
+    <mat-card class="card" [routerLink]="cardsExist() ? 'learn' : null" [ngClass]="!cardsExist() ? 'disabled' : null" [matTooltip]="!cardsExist() ? 'Füge Karten hinzu, um das Fach zu lernen' : null">
+      <mat-card-header>
+        <mat-card-title >Lernen</mat-card-title>
+        <mat-card-subtitle style="font-size: 15pt;">Lerne das Set {{subject.name}}</mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+    <mat-card class="card" routerLink="edit">
+      <mat-card-header>
+        <mat-card-title >Bearbeiten</mat-card-title>
+        <mat-card-subtitle style="font-size: 15pt;">Bearbeite das Set {{subject.name}}</mat-card-subtitle>
+      </mat-card-header>
+    </mat-card>
+  </div>
+</div>
