--- a/src/app/subjects/subject-detail.component.scss
+++ b/src/app/subjects/subject-detail.component.scss
@@ -1,27 +1,30 @@
-.card-container-outer {
-  display: inline;
-  position: relative;
-  width: 50%;
-
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90%;
 }
 
-.card-container-inner {
-  text-align: center;
-  vertical-align: middle;
-  margin-left: 15%;
-  height: 100%;
-
+.inner-container {
+  display: flex;
+  justify-content: space-between;
+  height: 10%;
+  width: 70%;
 }
 
-.card-container {
-  width: 60%;
-  min-height: 50%;
-  display: inline-block;
-  margin-right: auto;
+.card {
+  width: 30%;
   height: 80%;
   cursor: pointer;
   text-align: center;
 
+  &.disabled {
+    opacity: 0.5;
+  }
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .mat-card-header{
@@ -37,10 +40,3 @@
 .mat-card-subtitle{
   text-align: center;
 }
-
-.td{
-  padding-top: 1px;
-}
-
-
-
